// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно рисуется на десктопе 1`] = `
<div
  className="PaymentDialogContainer PaymentDialogContainer_platform_desktop"
>
  <iframe
    className="PaymentDialogContainer__frame"
    height="350px"
    width="490px"
  />
</div>
`;

exports[`правильно рисуется на мобилке 1`] = `
<div
  className="PaymentDialogContainer PaymentDialogContainer_platform_mobile"
>
  <iframe
    className="PaymentDialogContainer__frame"
    height="200px"
    width="100%"
  />
</div>
`;

exports[`правильно формирует ссылку для айфрейма 1`] = `
Object {
  "category": "cars",
  "from": "new-lk-tab",
  "geoId": 213,
  "offerId": "1234567890-foo",
  "orderId": "123-bar",
  "product": "%5B%7B%22name%22%3A%22package_turbo%22%2C%22count%22%3A1%7D%5D",
  "purchaseCount": 1,
  "salesmanDomain": "autoru",
  "section": "used",
  "stoId": "my-sto-it-the-best",
}
`;
